<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.unlibrary.library.LibraryViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="16dp"
            android:text="@string/username_hint"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.selectedRequester.username}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="16dp"
            android:text="@string/email_hint"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.selectedRequester.email}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/decline_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/decline_request_fab_description"
            android:visibility="@{viewModel.showHandoffLocation() ? View.GONE : View.VISIBLE }"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/accept_request"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:srcCompat="@drawable/ic_close_24px" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/accept_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/accept_request_fab_description"
            android:onClick="@{()->viewModel.initMapsFragment()}"
            android:visibility="@{viewModel.showHandoffLocation() ? View.GONE : View.VISIBLE }"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:srcCompat="@drawable/ic_done_24px" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
