<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.unlibrary.library.LibraryViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bookImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:imagePath="@{viewModel.currentBook.photo}"
            tools:imageUri="@{viewModel.takenPhoto}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_book_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/delete_book_fab_description"
            app:backgroundTint="@color/colorAccent"
            android:visibility="@{viewModel.showBookPhotoDeleteButton() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/bookImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookImage"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_book_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/add_photo_of_book"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/bookImage"
            app:layout_constraintEnd_toStartOf="@+id/delete_book_photo"
            app:layout_constraintTop_toBottomOf="@+id/bookImage"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24" />
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/auto_fill_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="Button to auto-fill fields"
            android:text="Auto-fill"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/ic_baseline_qr_code_scanner_24"
            app:layout_constraintBottom_toBottomOf="@+id/bookImage"
            app:layout_constraintEnd_toStartOf="@+id/add_book_photo"
            app:layout_constraintTop_toBottomOf="@+id/bookImage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/title_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookImage">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.currentBook.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_author_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/author_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_title_input">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.currentBook.author}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_isbn_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/isbn_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_author_input">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.currentBook.isbn}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="@{()->viewModel.saveBook()}"
            android:text="@string/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_isbn_input" />

        <ProgressBar
            android:id="@+id/spinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
