<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.unlibrary.library.LibraryViewModel" />

        <import type="android.view.View" />
        <import type="com.example.unlibrary.models.Book"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/library_book_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/bookImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="@null"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:imagePath="@{viewModel.currentBook.photo}" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/handoff_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/handoff_book"
                    android:visibility="@{viewModel.showHandoffButton()? View.VISIBLE : View.GONE}"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/bookImageButton"
                    app:layout_constraintEnd_toStartOf="@+id/edit_book"
                    app:layout_constraintTop_toBottomOf="@+id/bookImageButton"
                    app:srcCompat="@drawable/ic_baseline_swap_vert_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/edit_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/edit_book_fab_description"
                    android:onClick="@{()->viewModel.editCurrentBook()}"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/bookImageButton"
                    app:layout_constraintEnd_toStartOf="@+id/delete_book"
                    app:layout_constraintTop_toBottomOf="@+id/bookImageButton"
                    app:srcCompat="@drawable/ic_baseline_edit_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/delete_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/delete_book_fab_description"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/bookImageButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bookImageButton"
                    app:srcCompat="@drawable/ic_baseline_delete_24" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="16dp"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bookImageButton" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.currentBook.title}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="16dp"
                    android:text="@string/author"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.currentBook.author}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="16dp"
                    android:text="@string/isbn"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.currentBook.isbn}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:text="@string/request_status"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="4dp"
                    android:clickable="false"
                    android:text="@{viewModel.currentBook.status.asLower()}"
                    android:textAlignment="center"
                    app:chipIcon="@drawable/status_color"
                    app:chipIconSize="16dp"
                    app:iconStartPadding="3dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:visibility="@{viewModel.currentBook.status == Book.Status.ACCEPTED ? View.VISIBLE : View.GONE}"
                    android:id="@+id/mapTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/handoff_location"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/status" />

                <com.google.android.material.card.MaterialCardView
                    android:visibility="@{viewModel.currentBook.status == Book.Status.ACCEPTED ? View.VISIBLE : View.GONE}"
                    android:layout_width="match_parent"
                    android:layout_height="148dp"
                    android:layout_margin="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mapTitle"
                    android:elevation="8dp"
                    android:id="@id/map_preview">
                    <com.google.android.gms.maps.MapView
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/map"
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        map:mapType="normal"
                        map:liteMode="true"/>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:text="@string/requesters"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:visibility="@{viewModel.requesters.size() == 0? View.GONE: View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/map_preview" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/requestersList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView10"
                    tools:listitem="@layout/fragment_library_requester_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bookImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                tools:imagePath="@{viewModel.currentBook.photo}" />

        </FrameLayout>
    </ScrollView>
</layout>
